--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daily Journal</title>
+  <title>Daily JOURNAL</title>
   <meta charset="utf-8">
+  <!-- Styles -->
+   <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
+        <p class="navbar-brand">MY DAILY JOURNAL</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
