--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,8 +1,21 @@
 
 
 <%- include("partials/header"); -%>
+
 <h1>Compose Journal</h1>
-<textarea name="" id="" cols="40" rows="20"></textarea>
-<br>
-<button type="submit">Publish</button>
+<form method="post" action="/compose">
+    <div class="form-group">
+        
+    </div>
+     <div class="form-group">
+        <label> Title</label>
+        <input type="text" name="postTitle" class="form-control">
+    </div>
+     <div class="form-group">
+        <label> Post </label>
+        <textarea name="postBody" id="text" cols="30" rows="10" class="form-control"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary" name="btn">Publish</button>
+</form>
+
 <%- include("partials/footer"); -%>
